<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_title_label"/>
    <EditText
        android:id="@+id/receipt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_title_hint"/>
    <EditText
        android:id="@+id/receipt_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_shop_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_details_label"/>
    <Button
        android:id="@+id/receipt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/receipt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_comment_hint"/>
</LinearLayout>